--- a/settings.ini
+++ b/settings.ini
@@ -1,6 +1,3 @@
-; This is the main server configuration
-; Most of the settings here can be configured using the webadmin interface, if enabled in webadmin.ini
-
 [Folders]
 ProtocolPalettes=Protocol
 
@@ -17,12 +14,12 @@ UUIDToProfileServer=sessionserver.mojang.com
 UUIDToProfileAddress=/session/minecraft/profile/%UUID%?unsigned=false
 
 [Server]
-Description=Cuberite - in C++!
+Description=Equitas cuberite creative server
 ShutdownMessage=Server shutdown
 MaxPlayers=100
 HardcoreEnabled=0
 AllowMultiLogin=0
-Ports=25565
+Ports=25602
 AllowMultiWorldTabCompletion=1
 DefaultViewDistance=10
 
@@ -36,11 +33,15 @@ LimitPlayerBlockChanges=1
 LoadOfflinePlayerData=0
 LoadNamedPlayerData=1
 
-Plugin=SkyBlock
+[Worlds]
+DefaultWorld=world
+
+[WorldPaths]
+world=../data/worlds/world
 
 [Plugins]
-Plugin=Core
-Plugin=ChatLog
+Core=1
+ChatLog=1
 
 [DeadlockDetect]
 Enabled=1
